[UI/UX:System] bugfix menu overlap on mobile (#349)
* in progress

* mostly finished instructor

* remove links

* finished first past revision of instructor outline

* fix menu on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,7 +13,8 @@ body {
 
 		nav,
 		header > form,
-		header > ul {
+		header > ul,
+                div#nav-tree {
 			display: block;
 		}
 
@@ -82,13 +83,6 @@ body {
 		margin-top: 0;
 		height: 100vh;
 		overflow-y: scroll;
-	}
-}
-
-div#nav-tree {
-    display: none;
-	@media (min-width: $mobile-break) {
-	    display: block;
 	}
 }
 
@@ -239,7 +233,8 @@ header {
 
 nav,
 header > form,
-header > ul {
+header > ul,
+div#nav-tree {
 	display: none;
 
 	@media (min-width: $mobile-break) {
